--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^26.0.21",
     "add": "^2.0.6",
     "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "classcat": "^5.0.3",
     "eslint": "^7.22.0",
@@ -34,6 +35,7 @@
     "prettier": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^0.5.6",
     "tailwindcss": "^2.0.4",
     "yarn": "^1.22.10"
   },
