--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-webcam": "^5.2.4",
     "tailwindcss": "^2.0.4",
     "yarn": "^1.22.10"
   },
